# SleepTimer

./: LICENSE  README.md  pyproject.toml
sleepmanager/: __main__.py  app.py
sleepmanager/SleepService/: service.py
sleepmanager/UI/: window.py
